# atlas

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  docker-compose.yml
.github/workflows/: add-to-project.yml  ci.yml  docker-build-push.yml  docker.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/crates/atlas-api/: Cargo.toml
backend/crates/atlas-api/src/: error.rs  main.rs
backend/crates/atlas-api/src/handlers/: addresses.rs  auth.rs  blocks.rs  config.rs  contracts.rs  etherscan.rs  labels.rs  logs.rs  mod.rs  nfts.rs  proxy.rs  search.rs  sse.rs  status.rs  tokens.rs  transactions.rs
backend/crates/atlas-common/: Cargo.toml
backend/crates/atlas-common/src/: db.rs  error.rs  lib.rs  types.rs
backend/crates/atlas-indexer/: Cargo.toml
backend/crates/atlas-indexer/src/: batch.rs  config.rs  copy.rs  da_worker.rs  evnode.rs  fetcher.rs  indexer.rs  main.rs  metadata.rs
backend/crates/atlas-server/: Cargo.toml
backend/crates/atlas-server/src/: cli.rs  config.rs  faucet.rs  head.rs  lib.rs  main.rs  metrics.rs  nft_metadata.rs  snapshot.rs  state_keys.rs
backend/crates/atlas-server/src/api/: error.rs  mod.rs
backend/crates/atlas-server/src/api/handlers/: addresses.rs  blocks.rs  config.rs  contracts.rs  etherscan.rs  faucet.rs  health.rs  logs.rs  metrics.rs  mod.rs  nfts.rs  proxy.rs  search.rs  sse.rs  stats.rs  status.rs  tokens.rs  transactions.rs
backend/crates/atlas-server/src/archive/: mod.rs
backend/crates/atlas-server/src/indexer/: batch.rs  copy.rs  da_worker.rs  evnode.rs  fetcher.rs  gap_fill_worker.rs  indexer.rs  metadata.rs  mod.rs
backend/crates/atlas-server/tests/integration/: addresses.rs  archive.rs  blocks.rs  common.rs  gap_fill.rs  main.rs  nfts.rs  schema.rs  search.rs  snapshots.rs  status.rs  tokens.rs  transactions.rs
backend/migrations/: 20240101000001_initial.sql  20240102000001_v2_features.sql  20240103000001_verified_contracts.sql  20240104000001_failed_blocks.sql  20240105000001_search_indexes.sql  20240106000001_contract_metadata.sql  20240107000001_nft_transfers_unique.sql  20240108000001_block_da_status.sql  20240109000001_cursor_pagination_indexes.sql  20240109000001_recompute_erc20_supply.sql  20240109000001_s3_archive.sql  20260407000002_add_blocks_base_fee_per_gas.sql  20260422000003_nft_metadata_state.sql  20260424000001_nft_tokens_name_trgm.sql
docs/: API.md  ARCHITECTURE.md  FEATURES_V2.md  PRD.md  WHITE_LABELING.md
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: addresses.ts  blocks.ts  chartData.ts  client.ts  config.ts  contracts.ts  faucet.ts  index.ts  labels.ts  logs.ts  nfts.ts  proxies.ts  search.ts  stats.ts  status.ts  tokens.ts  transactions.ts
frontend/src/assets/: defaultLogos.ts
frontend/src/components/: AddressLink.tsx  BlockLink.tsx  BrandPrimitives.tsx  ContractTab.tsx  ContractTypeBadge.tsx  CopyButton.tsx  Error.tsx  EventLogs.tsx  ImageIpfs.tsx  LabeledAddress.tsx  Layout.tsx  Loading.tsx  Pagination.tsx  ProxyBadge.tsx  SearchBar.tsx  SmoothCounter.tsx  StatusBadge.tsx  TxHashLink.tsx  index.ts
frontend/src/constants/: contractVerification.ts
frontend/src/context/: BlockStatsContext.tsx  BrandingContext.tsx  FaucetInfoContext.tsx  ThemeContext.tsx  branding-context.ts  branding.test.ts  branding.ts  theme-context.ts
frontend/src/hooks/: index.ts  useAddress.ts  useAddresses.ts  useBlockSSE.ts  useBlocks.ts  useBranding.ts  useChartColors.ts  useChartData.ts  useContract.ts  useEthBalance.ts  useEthPrice.ts  useFaucetInfo.ts  useFeatures.ts  useLabels.ts  useLatestBlockHeight.ts  useLogs.ts  useNFTs.ts  useProxies.ts  useStats.ts  useTokenChart.ts  useTokens.ts  useTransactions.ts  useTransfers.ts
frontend/src/pages/: AddressPage.tsx  AddressesPage.tsx  BlockDetailPage.tsx  BlockTransactionsPage.tsx  BlocksPage.tsx  FaucetPage.tsx  NFTContractPage.tsx  NFTTokenPage.tsx  NFTsPage.tsx  NotFoundPage.tsx  SearchResultsPage.tsx  StatusPage.tsx  TokenDetailPage.tsx  TokensPage.tsx  TransactionDetailPage.tsx  TransactionsPage.tsx  WelcomePage.tsx  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: abiDecode.ts  apiError.ts  color.test.ts  color.ts  format.ts  index.ts  nftMetadata.test.ts  nftMetadata.ts
