[workspace]
resolver = "2"
members = [
    "crates/atlas-common",
    "crates/atlas-indexer",
    "crates/atlas-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rollkit/atlas"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "json", "bigdecimal", "chrono"] }

# Ethereum
alloy = { version = "0.9", features = ["full", "provider-http", "rpc-types-eth"] }

# Serialization
serde = { version = ">=1.0.171, <1.0.220", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Utilities
bigdecimal = { version = "0.4", features = ["serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
atlas-common = { path = "crates/atlas-common" }
