[workspace]
resolver = "2"
members = [
    "crates/atlas-common",
    "crates/atlas-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rollkit/atlas"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "json", "bigdecimal", "chrono"] }

# Ethereum
alloy = { version = "1", features = ["full", "provider-http", "rpc-types-eth"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Config
dotenvy = "0.15"

# Streaming
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# Utilities
bigdecimal = { version = "0.4", features = ["serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Testing
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Internal crates
atlas-common = { path = "crates/atlas-common" }
