[package]
name = "atlas-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atlas-server"
path = "src/main.rs"

[dependencies]
atlas-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
bigdecimal = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
# Indexer-specific
num-bigint = "0.4"
async-channel = "2.3"
governor = "0.6"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.12"
rustls = "0.23"
webpki-roots = "0.26"
